Added Jabra logo

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </head>
 
 <body>
-    <h1>Jabra JavaScript SDK properties and button customization demo</h1>
+    <h1><img src="jabra-logo.svg" alt="Jabra Logo" width="80">  Jabra JavaScript SDK properties and button customization demo</h1>
     <div class="layout">
         <div class="left-pane">
             <!-- Output/log area -->
