--- a/index.html
+++ b/index.html
@@ -5,129 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jabra JavaScript SDK properties and button customization demo</title>
-    <style>
-        body,
-        input,
-        select,
-        h1,
-        h2 h3,
-        h4,
-        h5,
-        h6 {
-            font-family: Arial, sans-serif !important;
-            overflow: visible;
-        }
-
-        button,
-        label {
-            font-family: Arial, sans-serif !important;
-            font-size: 1em;
-            vertical-align: middle;
-        }
-
-        textarea#outputBox {
-            font-family: Consolas, monospace !important;
-            font-size: 0.8em;
-            width: 100%;
-            height: 45vh;
-            resize: vertical;
-        }
-
-        select {
-            font-family: Arial, sans-serif !important;
-            font-size: 1em;
-        }
-
-        /* --- Layout --- */
-        .layout {
-            display: flex;
-            gap: 24px;
-            align-items: flex-start;
-        }
-
-        .left-pane,
-        .right-pane {
-            flex: 1 1 50%;
-            max-width: 50%;
-        }
-
-        .left-pane {
-            min-width: 400px;
-        }
-
-        .right-pane {
-            min-width: 400px;
-        }
-
-        @media (max-width: 800px) {
-            .layout {
-                flex-direction: column;
-            }
-
-            .left-pane,
-            .right-pane {
-                max-width: 100%;
-            }
-        }
-
-        /* --- Right panel styles --- */
-        .info-panel {
-            border: 1px solid #ccc;
-            padding: 16px;
-            border-radius: 8px;
-            background: #fafafa;
-            font-size: 0.95em;
-        }
-
-        .info-panel h2 {
-            margin: 0 0 12px 0;
-            font-size: 1.1em;
-        }
-
-        .kv {
-            display: flex;
-            align-items: center;
-            margin-bottom: 12px;
-        }
-
-        .kv label {
-            min-width: 180px;
-            font-weight: 600;
-        }
-
-        .small-num {
-            width: 4ch;
-            text-align: right;
-            padding: 4px 4px;
-            box-sizing: border-box;
-            border: 1px solid #666;
-            border-radius: 4px;
-            background: #fff;
-        }
-
-        .small-text {
-            width: 20ch;
-            text-align: right;
-            padding: 4px 4px;
-            box-sizing: border-box;
-            border: 1px solid #666;
-            border-radius: 4px;
-            background: #fff;
-        }
-
-        /* Make readonly inputs visually non-editable but selectable */
-        .small-num[readonly] {
-            background: #f9f9f9;
-            font-size: medium;
-            font-weight: bold;
-        }
-
-        .small-text[readonly] {
-            background: #f9f9f9;
-            font-size: medium;
-            font-weight: bold;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
