--- a/index.html
+++ b/index.html
@@ -2,91 +2,111 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jabra JavaScript SDK properties and button customization demo</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Jabra JavaScript SDK properties and button customization demo</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <h1><img src="jabra-logo.svg" alt="Jabra Logo" width="80"> Jabra JavaScript SDK properties and button customization
-        demo</h1>
-    <div class="layout">
-        <div class="left-pane">
-            <div class="info-panel">
-                <!-- Output/log area -->
-                <textarea id="outputBox" readonly></textarea>
-                <br>
-                <button id="webHidButton" disabled>Grant WebHID permission to headset</button>
-            </div><br>
-            <div class="info-panel">
-                <!-- Existing customization controls remain on left -->
-                <h1>Button customization</h1>
-                <label for="colorSelector">Three-dot button color:</label>
-                <select id="colorSelector" disabled>
-                    <option value="blue" selected>Blue</option>
-                    <option value="red">Red</option>
-                    <option value="green">Green</option>
-                    <option value="yellow">Yellow</option>
-                    <option value="custom">Custom (RGB)</option>
-                </select>
-                <span id="customColorInputs" style="display:none; margin-left: 1em;">
-                    <span style="margin-right: 1em; color: #666; font-size: 0.95em;">(Red, Green, Blue: 0–255)</span>
-                    <label for="customR">Red:</label>
-                    <input type="number" id="customR" min="0" max="255" value="0"
-                        style="width:4em; margin-right:0.5em;">
-                    <label for="customG">Green:</label>
-                    <input type="number" id="customG" min="0" max="255" value="0"
-                        style="width:4em; margin-right:0.5em;">
-                    <label for="customB">Blue:</label>
-                    <input type="number" id="customB" min="0" max="255" value="0"
-                        style="width:4em; margin-right:0.5em;">
-                    <button id="applyCustomColorBtn" style="margin-left:1em;">Apply</button>
-                </span>
-                <br><br>
-                <label for="ledModeSelector">LED mode:</label>
-                <select id="ledModeSelector" disabled>
-                    <option value="on" selected>on</option>
-                    <option value="slowPulse">slowPulse</option>
-                    <option value="fastPulse">fastPulse</option>
-                    <option value="off">off</option>
-                </select>
-                <h4 style="font-weight: 100;font-style: italic;">Only enabled for Jabra Engage 40, 50 and 50 II
-                    headsets. Tap three dot button on headset controller to see button event.</h4>
-            </div>
+  <h1>
+    <img src="jabra-logo.svg">
+    Jabra JavaScript SDK properties and button customization demo
+  </h1>
+
+  <div class="layout">
+    <div class="left-pane">
+
+      <div class="info-panel">
+        <textarea id="outputBox" readonly></textarea>
+        <button id="webHidButton" disabled>Grant WebHID permission to headset</button>
+      </div>
+
+      <div class="info-panel">
+        <h2>Button customization</h2>
+
+        <h3>Three-dot button</h3>
+        <div class="form-section">
+          <label for="colorSelector">Button color:</label>
+          <select id="colorSelector" disabled>
+            <option value="blue" selected>Blue</option>
+            <option value="red">Red</option>
+            <option value="green">Green</option>
+            <option value="yellow">Yellow</option>
+            <option value="custom">Custom (RGB)</option>
+          </select>
         </div>
-        <div class="right-pane">
-            <!-- Telemetry / status panel -->
-            <div class="info-panel">
-                <h1>Headset telemetry (properties)</h1>
-                <br>
-                <div class="kv"><label>Active headset:</label> <span id="activeHeadsetName">(none)</span></div>
-                <div class="kv"><label for="ambientNoiseValue">Ambient noise:</label> <input id="ambientNoiseValue"
-                        class="small-num" type="text" readonly placeholder="n/a" aria-label="Ambient noise level"></div>
-                <div class="kv"><label for="audioExposureValue">Audio exposure:</label> <input id="audioExposureValue"
-                        class="small-num" type="text" readonly placeholder="n/a" aria-label="Audio exposure"></div>
-                <div class="kv"><label for="speechAnalyticsValue">Speech analytics:</label> <input
-                        id="speechAnalyticsValue" class="small-text" type="text" readonly maxlength="30"
-                        placeholder="n/a" aria-label="Speech analytics value"></div>
-                <div class="kv"><label for="muteStateValue">Microphone mute state:</label> <input id="muteStateValue"
-                        class="small-text" type="text" readonly maxlength="30" placeholder="n/a"
-                        aria-label="Mute state value"></div>
-                <h4 style="font-weight: 100;font-style: italic;">Only enabled for Jabra Engage 40, 50 and 50 II
-                    headsets. To see values the microphone must be active, as for example when in a meeting.</h4>
-                <h4 style="font-weight: 100;font-style: italic;">Try out: Speaking, letting far end speak (play sound to
-                    the headset), speak over the far end (cross talk), speaking while microphone is muted.</h4>
-            </div><br>
-            <div class="info-panel">
-                <h1>Headset settings (properties)</h1>
-                <label for="sideToneSelector">Side Tone setting:</label>
-                <select id="sideToneSelector" disabled>
-                    <option value="true">On</option>
-                    <option value="false">Off</option>
-                </select>
-            </div>
+        <div id="customColorInputs" class="hidden form-section">
+          <label for="customR">Red:</label>
+          <input type="number" id="customR" min="0" max="255" value="0">
+          <label for="customG">Green:</label>
+          <input type="number" id="customG" min="0" max="255" value="0">
+          <label for="customB">Blue:</label>
+          <input type="number" id="customB" min="0" max="255" value="0">
+          <button id="applyCustomColorBtn">Apply</button>
+          <div class="subtle">(Red, Green, Blue: 0–255)</div>
         </div>
+
+        <div class="form-section">
+          <label for="ledModeSelector">LED mode:</label>
+          <select id="ledModeSelector" disabled>
+            <option value="on" selected>on</option>
+            <option value="slowPulse">slowPulse</option>
+            <option value="fastPulse">fastPulse</option>
+            <option value="off">off</option>
+          </select>
+        </div>
+
+        <div class="comment">Only enabled for Jabra Engage 40, 50 and 50 II headsets. Tap three dot button on
+          headset controller to see button event.</div>
+      </div>
     </div>
-    <script type="module" src="./index.js"></script>
+    <div class="right-pane">
+      <div class="info-panel">
+        <h2>Headset telemetry (properties)</h2>
+
+        <table>
+          <tbody>
+            <tr>
+              <th>Active headset:</th>
+              <td><span id="activeHeadsetName">(none)</span></td>
+            </tr>
+            <tr>
+              <th>Ambient noise:</th>
+              <td><input id="ambientNoiseValue" class="small-num" type="text" readonly placeholder="n/a"></td>
+            </tr>
+            <tr>
+              <th>Audio exposure:</th>
+              <td><input id="audioExposureValue" class="small-num" type="text" readonly placeholder="n/a"></td>
+            </tr>
+            <tr>
+              <th>Speech analytics:</th>
+              <td><input id="speechAnalyticsValue" class="small-text" type="text" readonly placeholder="n/a"></td>
+            </tr>
+            <tr>
+              <th>Microphone mute state:</th>
+              <td><input id="muteStateValue" class="small-text" type="text" readonly placeholder="n/a"></td>
+            </tr>
+          </tbody>
+        </table>
+
+        <p class="comment">Only enabled for Jabra Engage 40, 50 and 50 II headsets. To see values the microphone
+          must be active, as for example when in a meeting.</p>
+        <p class="comment">Try out: Speaking, letting far end speak (play
+          sound to the headset), speak over the far end (cross talk), speaking while microphone is muted.</p>
+      </div>
+
+      <div class="info-panel">
+        <h2>Headset settings (properties)</h2>
+        <label for="sideToneSelector">Side Tone setting:</label>
+        <select id="sideToneSelector" disabled>
+          <option value="true">On</option>
+          <option value="false">Off</option>
+        </select>
+      </div>
+    </div>
+  </div>
+  <script type="module" src="./index.js"></script>
 </body>
 
 </html>
