--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
         <h3>Three-dot button</h3>
         <div class="form-section">
-          <label for="colorSelector">Button color:</label>
-          <select id="colorSelector" disabled>
+          <label for="threeDotColorSelector">Button color:</label>
+          <select id="threeDotColorSelector" disabled>
             <option value="blue" selected>Blue</option>
             <option value="red">Red</option>
             <option value="green">Green</option>
@@ -48,12 +48,12 @@
         </div>
 
         <div class="form-section">
-          <label for="ledModeSelector">LED mode:</label>
-          <select id="ledModeSelector" disabled>
-            <option value="on" selected>on</option>
-            <option value="slowPulse">slowPulse</option>
-            <option value="fastPulse">fastPulse</option>
-            <option value="off">off</option>
+          <label for="threeDotModeSelector">LED mode:</label>
+          <select id="threeDotModeSelector" disabled>
+            <option value="On" selected>on</option>
+            <option value="SlowPulse">slowPulse</option>
+            <option value="FastPulse">fastPulse</option>
+            <option value="Off">off</option>
           </select>
         </div>
 
