--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
       <div class="info-panel">
         <textarea id="outputBox" readonly></textarea>
         <button id="webHidButton" disabled>Grant WebHID permission to headset</button>
+        <a href="https://developer.jabra.com/sdks-and-tools/javascript#transport-mode-for-web-apps" target="_blank"
+          class="subtle">
+          Read more about WebHID permission and other transport modes here
+        </a>
       </div>
 
       <div class="info-panel">
