easier to read logging

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="left-pane">
 
       <div class="info-panel">
-        <textarea id="outputBox" readonly></textarea>
+        <div id="outputBox"></div>
         <button id="webHidButton" disabled>Grant WebHID permission to headset</button>
         <a href="https://developer.jabra.com/sdks-and-tools/javascript#transport-mode-for-web-apps" target="_blank"
           class="subtle">
