--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       </div>
     </div>
   </div>
-  <script type="module" src="./index.js"></script>
+  <script type="module" src="./typescript/index.js"></script>
 </body>
 
 </html>
